syntax = "proto3";
package pb;

// 商城
message CBuy
{
    uint32 code = 1;//协议号
    uint32 id   = 2;//购买ID
}

message SBuy
{
    uint32 code   = 1; //协议号
    uint32 result = 2; //0购买成功,1失败
    uint32 error  = 3; //错误码
}

// 微信支付 - 下单
message CWxpayOrder
{
    uint32 code = 1; //协议号
    uint32 id   = 2; //购买商品ID
    string body = 3; //购买商品描述
}

message SWxpayOrder
{
    uint32 code    = 1; // 协议号
    uint32 id      = 2; // 购买商品ID
    string payreq  = 3; // 调起支付接口请求参数
    string orderid = 4; // 订单号
    uint32 error   = 5; // 错误码
}

// 微信支付 - 查询
message CWxpayQuery
{
    uint32 code     = 1;//协议号
    string transid  = 2;//微信订单号
}

message SWxpayQuery
{
    uint32 code    = 1;// 协议号
    string orderid = 2;// 订单号
    uint32 result  = 3;// 0支付成功,1发货中,2订单号不存在,3支付失败
    uint32 error   = 4;// 错误码
}

//  苹果支付
message CApplePay
{
    uint32 code    = 1; //协议号
    uint32 id      = 2; //购买商品ID
    string receipt = 3; //客户端提交上来的苹果支付验证数据
}

message SApplePay
{
    uint32 code    = 1;//协议号
    uint32 id      = 2;//购买商品ID
    uint32 error   = 3;//错误码
}

// 商城
message CShop
{
    uint32 code = 1;//协议号
}

message SShop
{
    uint32 code   = 1;//协议号
    repeated Shop   list   = 2; //商品列表
    uint32 error  = 3; //错误码
}

// 商品
message Shop
{
    uint32 id     = 1; //购买ID
    uint32 status = 2; //物品状态,1=热卖
    uint32 propid = 3; //兑换的物品,1=钻石
    uint32 payway = 4; //支付方式,1=RMB
    uint32 number = 5; //兑换的数量
    uint32 price  = 6; //支付价格(单位元)
    string name   = 7; //物品名称
    string info   = 8; //物品信息
}
